--- a/archives/toutiao-search/2023-11-18.md
+++ b/archives/toutiao-search/2023-11-18.md
@@ -1,56 +1,80 @@
 # 2023-11-18
 
-共 310 条
+共 329 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sat Nov 18 2023 18:00:52 GMT+0800 (China Standard Time) -->
-1. [媒体人：中日关系出现三个微妙变化](https://so.toutiao.com/search?keyword=媒体人：中日关系出现三个微妙变化)
-1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+<!-- 最后更新时间 Sat Nov 18 2023 19:00:44 GMT+0800 (China Standard Time) -->
+1. [男子记录妈妈患癌3年前后变化](https://so.toutiao.com/search?keyword=男子记录妈妈患癌3年前后变化)
+1. [孕妇吃火锅拉了一下凳子手指被切断](https://so.toutiao.com/search?keyword=孕妇吃火锅拉了一下凳子手指被切断)
 1. [共同应答亚太发展“三问”](https://so.toutiao.com/search?keyword=共同应答亚太发展“三问”)
-1. [哈登3+1准绝杀 快船胜火箭止6连败](https://so.toutiao.com/search?keyword=哈登3+1准绝杀+快船胜火箭止6连败)
-1. [夫妻投资2千万盘活烂尾楼被刑拘](https://so.toutiao.com/search?keyword=夫妻投资2千万盘活烂尾楼被刑拘)
 1. [台名嘴评拜登称赞红旗车并探头细看](https://so.toutiao.com/search?keyword=台名嘴评拜登称赞红旗车并探头细看)
-1. [比亚迪宋L预售订单超11000辆](https://so.toutiao.com/search?keyword=比亚迪宋L预售订单超11000辆)
-1. [出租车误入“S弯”进退两难](https://so.toutiao.com/search?keyword=出租车误入“S弯”进退两难)
+1. [媒体人：中日关系出现三个微妙变化](https://so.toutiao.com/search?keyword=媒体人：中日关系出现三个微妙变化)
+1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
 1. [媒体：中韩战四万张门票一天售空](https://so.toutiao.com/search?keyword=媒体：中韩战四万张门票一天售空)
-1. [小卡谈杰伦·格林16投5中](https://so.toutiao.com/search?keyword=小卡谈杰伦·格林16投5中)
+1. [出租车误入“S弯”进退两难](https://so.toutiao.com/search?keyword=出租车误入“S弯”进退两难)
+1. [夫妻投资2千万盘活烂尾楼被刑拘](https://so.toutiao.com/search?keyword=夫妻投资2千万盘活烂尾楼被刑拘)
+1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
 1. [官方辟谣重庆石堰将建机场](https://so.toutiao.com/search?keyword=官方辟谣重庆石堰将建机场)
-1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
+1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
 1. [哈登来快船时曾说“我就是体系”](https://so.toutiao.com/search?keyword=哈登来快船时曾说“我就是体系”)
-1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
 1. [揭秘制片主任工资能挣多少](https://so.toutiao.com/search?keyword=揭秘制片主任工资能挣多少)
+1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
+1. [余承东说智界S7比小米汽车更帅](https://so.toutiao.com/search?keyword=余承东说智界S7比小米汽车更帅)
+1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
+1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
+1. [多位大咖广州车展互相串门](https://so.toutiao.com/search?keyword=多位大咖广州车展互相串门)
+1. [X公司将对Media Matters等提起诉讼](https://so.toutiao.com/search?keyword=X公司将对Media+Matters等提起诉讼)
+1. [美国犹太裔众议员呼吁巴以停火](https://so.toutiao.com/search?keyword=美国犹太裔众议员呼吁巴以停火)
+1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
+1. [极狐阿尔法T5首发亮相](https://so.toutiao.com/search?keyword=极狐阿尔法T5首发亮相)
+1. [台积电创办人回应“美半导体独立”](https://so.toutiao.com/search?keyword=台积电创办人回应“美半导体独立”)
+1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
+1. [烤肉姐：威少今天特别高兴](https://so.toutiao.com/search?keyword=烤肉姐：威少今天特别高兴)
+1. [韩媒：中国男足的更新换代失败了](https://so.toutiao.com/search?keyword=韩媒：中国男足的更新换代失败了)
+1. [妈妈攒2年猫毛亲手为猫咪做小被子](https://so.toutiao.com/search?keyword=妈妈攒2年猫毛亲手为猫咪做小被子)
+1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
+1. [遇拜登出行封路 岸田一行只好步行](https://so.toutiao.com/search?keyword=遇拜登出行封路+岸田一行只好步行)
+1. [花99.8万买到凶宅起诉卖家退回23万](https://so.toutiao.com/search?keyword=花99.8万买到凶宅起诉卖家退回23万)
+1. [泽连斯基感慨：世界不再聚焦乌克兰](https://so.toutiao.com/search?keyword=泽连斯基感慨：世界不再聚焦乌克兰)
+1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
+1. [凯迪拉克CELESTIQ量产版亮相](https://so.toutiao.com/search?keyword=凯迪拉克CELESTIQ量产版亮相)
+1. [OpenAI新CEO什么来路](https://so.toutiao.com/search?keyword=OpenAI新CEO什么来路)
+1. [普京：俄罗斯支持和平](https://so.toutiao.com/search?keyword=普京：俄罗斯支持和平)
+1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
+1. [俄代表团抱怨APEC会议期间受限过多](https://so.toutiao.com/search?keyword=俄代表团抱怨APEC会议期间受限过多)
+1. [原来辛芷蕾私底下这么温柔](https://so.toutiao.com/search?keyword=原来辛芷蕾私底下这么温柔)
+1. [当萌娃“消防员”遇到真消防员](https://so.toutiao.com/search?keyword=当萌娃“消防员”遇到真消防员)
+1. [一起来看狮子座流星雨](https://so.toutiao.com/search?keyword=一起来看狮子座流星雨)
+1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
+1. [美国前总统卡特夫妇接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特夫妇接受临终关怀)
+1. [媒体：马云家族“秘密花园”隐现](https://so.toutiao.com/search?keyword=媒体：马云家族“秘密花园”隐现)
+1. [森特股份董事长正配合相关部门调查](https://so.toutiao.com/search?keyword=森特股份董事长正配合相关部门调查)
+1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
+1. [英媒：大熊猫阳光和甜甜12月回中国](https://so.toutiao.com/search?keyword=英媒：大熊猫阳光和甜甜12月回中国)
+1. [内蒙古女篮众将更衣室庆祝胜利](https://so.toutiao.com/search?keyword=内蒙古女篮众将更衣室庆祝胜利)
+1. [小马哥谈惨败日本U22](https://so.toutiao.com/search?keyword=小马哥谈惨败日本U22)
+1. [薛之谦儿子透风又暖心](https://so.toutiao.com/search?keyword=薛之谦儿子透风又暖心)
+1. [哈登3+1准绝杀 快船胜火箭止6连败](https://so.toutiao.com/search?keyword=哈登3+1准绝杀+快船胜火箭止6连败)
+1. [比亚迪宋L预售订单超11000辆](https://so.toutiao.com/search?keyword=比亚迪宋L预售订单超11000辆)
+1. [小卡谈杰伦·格林16投5中](https://so.toutiao.com/search?keyword=小卡谈杰伦·格林16投5中)
+1. [羽生结弦离婚原因](https://so.toutiao.com/search?keyword=羽生结弦离婚原因)
 1. [哈登生涯助攻数超越托尼·帕克](https://so.toutiao.com/search?keyword=哈登生涯助攻数超越托尼·帕克)
 1. [余承东：智界问界后还有2个“界”](https://so.toutiao.com/search?keyword=余承东：智界问界后还有2个“界”)
 1. [阿尔及利亚球员破门后声援巴勒斯坦](https://so.toutiao.com/search?keyword=阿尔及利亚球员破门后声援巴勒斯坦)
 1. [女小生走红：老公不是性别而是感觉](https://so.toutiao.com/search?keyword=女小生走红：老公不是性别而是感觉)
 1. [烤鸭店火灾扑救过程中液化气罐爆炸](https://so.toutiao.com/search?keyword=烤鸭店火灾扑救过程中液化气罐爆炸)
-1. [马航MH370事件过去9年有哪些新进展](https://so.toutiao.com/search?keyword=马航MH370事件过去9年有哪些新进展)
-1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
 1. [岸田文雄声称拜登邀请他明年初访美](https://so.toutiao.com/search?keyword=岸田文雄声称拜登邀请他明年初访美)
-1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
-1. [景甜现场摸许凯腹肌](https://so.toutiao.com/search?keyword=景甜现场摸许凯腹肌)
-1. [遇拜登出行封路 岸田一行只好步行](https://so.toutiao.com/search?keyword=遇拜登出行封路+岸田一行只好步行)
-1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
-1. [孕妇吃火锅拉了一下凳子手指被切断](https://so.toutiao.com/search?keyword=孕妇吃火锅拉了一下凳子手指被切断)
 1. [河南百亩菊花种植户称被群众偷摘](https://so.toutiao.com/search?keyword=河南百亩菊花种植户称被群众偷摘)
 1. [媒体专访《珠江人家》编剧柳桦](https://so.toutiao.com/search?keyword=媒体专访《珠江人家》编剧柳桦)
 1. [开车撞坏限高杆 司机质疑维修费用](https://so.toutiao.com/search?keyword=开车撞坏限高杆+司机质疑维修费用)
-1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
-1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
-1. [原来辛芷蕾私底下这么温柔](https://so.toutiao.com/search?keyword=原来辛芷蕾私底下这么温柔)
-1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [美国前总统卡特夫妇接受临终关怀](https://so.toutiao.com/search?keyword=美国前总统卡特夫妇接受临终关怀)
 1. [中日领导人重新确认“战略互惠”](https://so.toutiao.com/search?keyword=中日领导人重新确认“战略互惠”)
 1. [公交公司回应小伙车上拉大便](https://so.toutiao.com/search?keyword=公交公司回应小伙车上拉大便)
 1. [芬兰决定向乌克兰提供更多防务援助](https://so.toutiao.com/search?keyword=芬兰决定向乌克兰提供更多防务援助)
-1. [普京：俄罗斯支持和平](https://so.toutiao.com/search?keyword=普京：俄罗斯支持和平)
 1. [台名嘴喊话赖清德：不要再骗人了](https://so.toutiao.com/search?keyword=台名嘴喊话赖清德：不要再骗人了)
 1. [刺伤霸凌者少年申请600万国赔被拒](https://so.toutiao.com/search?keyword=刺伤霸凌者少年申请600万国赔被拒)
 1. [舒淇与苏有朋同框](https://so.toutiao.com/search?keyword=舒淇与苏有朋同框)
 1. [贷款近50万元未还清法官上门扣车](https://so.toutiao.com/search?keyword=贷款近50万元未还清法官上门扣车)
 1. [马航曾申请MH370商标被驳回](https://so.toutiao.com/search?keyword=马航曾申请MH370商标被驳回)
-1. [泽连斯基感慨：世界不再聚焦乌克兰](https://so.toutiao.com/search?keyword=泽连斯基感慨：世界不再聚焦乌克兰)
-1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
 1. [中国“霸总”爽剧在海外杀疯了](https://so.toutiao.com/search?keyword=中国“霸总”爽剧在海外杀疯了)
 1. [浓眉：詹姆斯可是联盟第一得分手](https://so.toutiao.com/search?keyword=浓眉：詹姆斯可是联盟第一得分手)
 1. [《宁安如梦》“薛姝”回应造型争议](https://so.toutiao.com/search?keyword=《宁安如梦》“薛姝”回应造型争议)
@@ -60,7 +84,6 @@
 1. [任泽平：证监会出台重大利好](https://so.toutiao.com/search?keyword=任泽平：证监会出台重大利好)
 1. [盘点广州车展亮相的热门MPV](https://so.toutiao.com/search?keyword=盘点广州车展亮相的热门MPV)
 1. [明学昌大儿子截瘫未被通缉](https://so.toutiao.com/search?keyword=明学昌大儿子截瘫未被通缉)
-1. [本轮巴以冲突致双方超1.34万人死亡](https://so.toutiao.com/search?keyword=本轮巴以冲突致双方超1.34万人死亡)
 1. [樊登畅聊上海科创教育](https://so.toutiao.com/search?keyword=樊登畅聊上海科创教育)
 1. [73岁港星回应为电诈头目祝寿](https://so.toutiao.com/search?keyword=73岁港星回应为电诈头目祝寿)
 1. [一名缅北回流人员落网后痛苦自述](https://so.toutiao.com/search?keyword=一名缅北回流人员落网后痛苦自述)
@@ -73,14 +96,12 @@
 1. [理想MEGA订单量已破万](https://so.toutiao.com/search?keyword=理想MEGA订单量已破万)
 1. [分析师：奥尔特曼遭罢免令人震惊](https://so.toutiao.com/search?keyword=分析师：奥尔特曼遭罢免令人震惊)
 1. [餐厅被曝用福寿螺做饭？店方回应](https://so.toutiao.com/search?keyword=餐厅被曝用福寿螺做饭？店方回应)
-1. [银行疯抢“个人养老金”](https://so.toutiao.com/search?keyword=银行疯抢“个人养老金”)
 1. [OpenAI首席执行官寻求微软新资金](https://so.toutiao.com/search?keyword=OpenAI首席执行官寻求微软新资金)
 1. [以士兵在加沙地带废墟前弹吉他唱歌](https://so.toutiao.com/search?keyword=以士兵在加沙地带废墟前弹吉他唱歌)
 1. [如何看待多家银行下调存款利率](https://so.toutiao.com/search?keyword=如何看待多家银行下调存款利率)
 1. [A股市场振幅收窄说明什么](https://so.toutiao.com/search?keyword=A股市场振幅收窄说明什么)
 1. [张钧甯方否认年底结婚](https://so.toutiao.com/search?keyword=张钧甯方否认年底结婚)
 1. [《英雄联盟》S13决赛明天开打](https://so.toutiao.com/search?keyword=《英雄联盟》S13决赛明天开打)
-1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
 1. [推动亚太合作再出发](https://so.toutiao.com/search?keyword=推动亚太合作再出发)
 1. [小卡：哈登是历史75大巨星之一](https://so.toutiao.com/search?keyword=小卡：哈登是历史75大巨星之一)
 1. [广州车展硬派SUV新车盘点](https://so.toutiao.com/search?keyword=广州车展硬派SUV新车盘点)
@@ -95,7 +116,6 @@
 1. [车展现场余承东15问：又有新爆料](https://so.toutiao.com/search?keyword=车展现场余承东15问：又有新爆料)
 1. [台媒曝张钧甯将年底结婚](https://so.toutiao.com/search?keyword=台媒曝张钧甯将年底结婚)
 1. [外媒发布加沙一所停工医院内部视频](https://so.toutiao.com/search?keyword=外媒发布加沙一所停工医院内部视频)
-1. [俄代表团抱怨APEC会议期间受限过多](https://so.toutiao.com/search?keyword=俄代表团抱怨APEC会议期间受限过多)
 1. [关晓彤cos敦煌飞天](https://so.toutiao.com/search?keyword=关晓彤cos敦煌飞天)
 1. [证监会：加强跨市场和跨境监测监控](https://so.toutiao.com/search?keyword=证监会：加强跨市场和跨境监测监控)
 1. [IBM宣布在X平台暂停广告投放](https://so.toutiao.com/search?keyword=IBM宣布在X平台暂停广告投放)
@@ -126,7 +146,6 @@
 1. [坦克700 Hi4-T预售价70万](https://so.toutiao.com/search?keyword=坦克700+Hi4-T预售价70万)
 1. [电影《劫数难逃》上线](https://so.toutiao.com/search?keyword=电影《劫数难逃》上线)
 1. [詹姆斯35+5+9 湖人轻取开拓者](https://so.toutiao.com/search?keyword=詹姆斯35+5+9+湖人轻取开拓者)
-1. [美国犹太裔众议员呼吁巴以停火](https://so.toutiao.com/search?keyword=美国犹太裔众议员呼吁巴以停火)
 1. [医生举报科室为拿回扣用贵40倍注射液](https://so.toutiao.com/search?keyword=医生举报科室为拿回扣用贵40倍注射液)
 1. [以高官敦促以军“烧毁”加沙地带](https://so.toutiao.com/search?keyword=以高官敦促以军“烧毁”加沙地带)
 1. [ChatGPT之父：中国在AI领域会很出色](https://so.toutiao.com/search?keyword=ChatGPT之父：中国在AI领域会很出色)
