--- a/archives/toutiao-search/2023-11-19.md
+++ b/archives/toutiao-search/2023-11-19.md
@@ -1,58 +1,75 @@
 # 2023-11-19
 
-共 157 条
+共 172 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Sun Nov 19 2023 11:01:07 GMT+0800 (China Standard Time) -->
-1. [老人坐轮椅横穿马路还示意车辆让行](https://so.toutiao.com/search?keyword=老人坐轮椅横穿马路还示意车辆让行)
-1. [中方要求日方全力搜救落水中国渔民](https://so.toutiao.com/search?keyword=中方要求日方全力搜救落水中国渔民)
-1. [世界遗产保护与合作中的中国贡献](https://so.toutiao.com/search?keyword=世界遗产保护与合作中的中国贡献)
-1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
+<!-- 最后更新时间 Sun Nov 19 2023 12:00:38 GMT+0800 (China Standard Time) -->
+1. [中国渔船在鹿儿岛海域倾覆5人失踪](https://so.toutiao.com/search?keyword=中国渔船在鹿儿岛海域倾覆5人失踪)
 1. [媒体：马云自称不退场](https://so.toutiao.com/search?keyword=媒体：马云自称不退场)
-1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
+1. [世界遗产保护与合作中的中国贡献](https://so.toutiao.com/search?keyword=世界遗产保护与合作中的中国贡献)
+1. [中方要求日方全力搜救落水中国渔民](https://so.toutiao.com/search?keyword=中方要求日方全力搜救落水中国渔民)
+1. [老人坐轮椅横穿马路还示意车辆让行](https://so.toutiao.com/search?keyword=老人坐轮椅横穿马路还示意车辆让行)
 1. [马尔代夫正式要求印度撤军](https://so.toutiao.com/search?keyword=马尔代夫正式要求印度撤军)
-1. [M19遗骸确认为崔海治烈士](https://so.toutiao.com/search?keyword=M19遗骸确认为崔海治烈士)
-1. [青岛宣布租房即可落户](https://so.toutiao.com/search?keyword=青岛宣布租房即可落户)
+1. [茅奖作品《雪山大地》的创作契机](https://so.toutiao.com/search?keyword=茅奖作品《雪山大地》的创作契机)
+1. [马斯克再表态：中国一定会统一](https://so.toutiao.com/search?keyword=马斯克再表态：中国一定会统一)
+1. [媒体：印度遭遇当头一棒](https://so.toutiao.com/search?keyword=媒体：印度遭遇当头一棒)
 1. [官方辟谣重庆石堰将建机场](https://so.toutiao.com/search?keyword=官方辟谣重庆石堰将建机场)
 1. [SpaceX证实与“星舰”失联 其已自毁](https://so.toutiao.com/search?keyword=SpaceX证实与“星舰”失联+其已自毁)
-1. [媒体细数缅北五大家族关系网](https://so.toutiao.com/search?keyword=媒体细数缅北五大家族关系网)
+1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
 1. [渔政回应云梦泽公司违规捕捞](https://so.toutiao.com/search?keyword=渔政回应云梦泽公司违规捕捞)
 1. [父女对话聊爸爸心中唯一的美女是谁](https://so.toutiao.com/search?keyword=父女对话聊爸爸心中唯一的美女是谁)
-1. [梁咏琪街头live](https://so.toutiao.com/search?keyword=梁咏琪街头live)
-1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
-1. [老板喜提大G烟花彩炮摆满一条街](https://so.toutiao.com/search?keyword=老板喜提大G烟花彩炮摆满一条街)
-1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
-1. [引众怒的“性感女外卖员”道歉了](https://so.toutiao.com/search?keyword=引众怒的“性感女外卖员”道歉了)
+1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
+1. [吉林一公交内飘落大量积雪](https://so.toutiao.com/search?keyword=吉林一公交内飘落大量积雪)
+1. [微信群里留的遗嘱有效吗？法院判了](https://so.toutiao.com/search?keyword=微信群里留的遗嘱有效吗？法院判了)
+1. [男子朋友圈骂人被人找上门掌掴](https://so.toutiao.com/search?keyword=男子朋友圈骂人被人找上门掌掴)
+1. [M19遗骸确认为崔海治烈士](https://so.toutiao.com/search?keyword=M19遗骸确认为崔海治烈士)
 1. [时速1000公里高速飞车试验线主体完工](https://so.toutiao.com/search?keyword=时速1000公里高速飞车试验线主体完工)
 1. [哈马斯发视频称包围以特种兵藏身地](https://so.toutiao.com/search?keyword=哈马斯发视频称包围以特种兵藏身地)
 1. [全国最牛钉子楼拆了](https://so.toutiao.com/search?keyword=全国最牛钉子楼拆了)
-1. [物理老师用沙子画出声音的样子](https://so.toutiao.com/search?keyword=物理老师用沙子画出声音的样子)
-1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
-1. [男子朋友圈骂人被人找上门掌掴](https://so.toutiao.com/search?keyword=男子朋友圈骂人被人找上门掌掴)
-1. [马路发生交通事故男子崩溃大叫](https://so.toutiao.com/search?keyword=马路发生交通事故男子崩溃大叫)
-1. [上一支单场进14球的国家队是日本](https://so.toutiao.com/search?keyword=上一支单场进14球的国家队是日本)
-1. [全新一代BMW 5系实拍解析](https://so.toutiao.com/search?keyword=全新一代BMW+5系实拍解析)
-1. [家长会上“学渣”爸爸发言有格局](https://so.toutiao.com/search?keyword=家长会上“学渣”爸爸发言有格局)
-1. [微信群里留的遗嘱有效吗？法院判了](https://so.toutiao.com/search?keyword=微信群里留的遗嘱有效吗？法院判了)
+1. [鲁迅孙子自称90%刷视频10%看书](https://so.toutiao.com/search?keyword=鲁迅孙子自称90%刷视频10%看书)
+1. [曝以与哈马斯即将达成临时停火协议](https://so.toutiao.com/search?keyword=曝以与哈马斯即将达成临时停火协议)
+1. [曝拉文不认为公牛在东部有竞争力](https://so.toutiao.com/search?keyword=曝拉文不认为公牛在东部有竞争力)
 1. [网传仰望U8在道路上“四脚朝天”](https://so.toutiao.com/search?keyword=网传仰望U8在道路上“四脚朝天”)
-1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
+1. [女子租房一个月发现藏有摄像头](https://so.toutiao.com/search?keyword=女子租房一个月发现藏有摄像头)
+1. [B站通报一起“人肉开盒”案例](https://so.toutiao.com/search?keyword=B站通报一起“人肉开盒”案例)
+1. [90后小伙跳水救人不幸遇难](https://so.toutiao.com/search?keyword=90后小伙跳水救人不幸遇难)
+1. [女子买衣服等一年既不发货也不退款](https://so.toutiao.com/search?keyword=女子买衣服等一年既不发货也不退款)
+1. [老板喜提大G烟花彩炮摆满一条街](https://so.toutiao.com/search?keyword=老板喜提大G烟花彩炮摆满一条街)
+1. [物理老师用沙子画出声音的样子](https://so.toutiao.com/search?keyword=物理老师用沙子画出声音的样子)
+1. [国足深圳开练备战中韩之战](https://so.toutiao.com/search?keyword=国足深圳开练备战中韩之战)
+1. [ChatGPT之父被开除细节披露](https://so.toutiao.com/search?keyword=ChatGPT之父被开除细节披露)
+1. [汶川地震微笑女孩结婚](https://so.toutiao.com/search?keyword=汶川地震微笑女孩结婚)
+1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
+1. [女子体验网红千层漏摔成九级伤残](https://so.toutiao.com/search?keyword=女子体验网红千层漏摔成九级伤残)
+1. [乘客堵门致地铁延误8分钟被行拘](https://so.toutiao.com/search?keyword=乘客堵门致地铁延误8分钟被行拘)
+1. [梁咏琪街头live](https://so.toutiao.com/search?keyword=梁咏琪街头live)
+1. [秦始皇帝陵文物专家谈修复地下兵团](https://so.toutiao.com/search?keyword=秦始皇帝陵文物专家谈修复地下兵团)
+1. [青岛宣布租房即可落户](https://so.toutiao.com/search?keyword=青岛宣布租房即可落户)
+1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
+1. [公交车车顶突然掉落大量雪](https://so.toutiao.com/search?keyword=公交车车顶突然掉落大量雪)
+1. [马路发生交通事故男子崩溃大叫](https://so.toutiao.com/search?keyword=马路发生交通事故男子崩溃大叫)
+1. [德国队赛后评分：纳格尔斯曼低分](https://so.toutiao.com/search?keyword=德国队赛后评分：纳格尔斯曼低分)
 1. [张靓颖晒与刘亦菲自拍](https://so.toutiao.com/search?keyword=张靓颖晒与刘亦菲自拍)
+1. [全新一代BMW 5系实拍解析](https://so.toutiao.com/search?keyword=全新一代BMW+5系实拍解析)
+1. [哈弗茨数据：1进球5次解围1次送点](https://so.toutiao.com/search?keyword=哈弗茨数据：1进球5次解围1次送点)
+1. [女子嫁10年从没做过饭](https://so.toutiao.com/search?keyword=女子嫁10年从没做过饭)
+1. [神十七乘组在轨三周](https://so.toutiao.com/search?keyword=神十七乘组在轨三周)
+1. [媒体细数缅北五大家族关系网](https://so.toutiao.com/search?keyword=媒体细数缅北五大家族关系网)
+1. [引众怒的“性感女外卖员”道歉了](https://so.toutiao.com/search?keyword=引众怒的“性感女外卖员”道歉了)
+1. [上一支单场进14球的国家队是日本](https://so.toutiao.com/search?keyword=上一支单场进14球的国家队是日本)
+1. [女子梦见丈夫出轨调查发现是真的](https://so.toutiao.com/search?keyword=女子梦见丈夫出轨调查发现是真的)
 1. [周深玩跷跷板玩到飞起来了](https://so.toutiao.com/search?keyword=周深玩跷跷板玩到飞起来了)
 1. [小学男生课间跳舞惊艳周围同学](https://so.toutiao.com/search?keyword=小学男生课间跳舞惊艳周围同学)
-1. [秦始皇帝陵文物专家谈修复地下兵团](https://so.toutiao.com/search?keyword=秦始皇帝陵文物专家谈修复地下兵团)
 1. [张钧甯方否认年底结婚](https://so.toutiao.com/search?keyword=张钧甯方否认年底结婚)
-1. [深圳一小鹏汽车从二楼坠落](https://so.toutiao.com/search?keyword=深圳一小鹏汽车从二楼坠落)
 1. [江西一正厅级干部被双开：品行恶劣](https://so.toutiao.com/search?keyword=江西一正厅级干部被双开：品行恶劣)
 1. [粉丝坐快艇喊范丞丞我爱你](https://so.toutiao.com/search?keyword=粉丝坐快艇喊范丞丞我爱你)
 1. [传OpenAI与奥特曼讨论重返CEO](https://so.toutiao.com/search?keyword=传OpenAI与奥特曼讨论重返CEO)
 1. [超市老板娘深夜接异常订单果断报警](https://so.toutiao.com/search?keyword=超市老板娘深夜接异常订单果断报警)
 1. [互换特产送出活羊一只](https://so.toutiao.com/search?keyword=互换特产送出活羊一只)
-1. [女子嫁10年从没做过饭](https://so.toutiao.com/search?keyword=女子嫁10年从没做过饭)
 1. [全新奔驰GLC轿跑亮相广州车展](https://so.toutiao.com/search?keyword=全新奔驰GLC轿跑亮相广州车展)
 1. [比萨斜塔上出现巨幅巴勒斯坦国旗](https://so.toutiao.com/search?keyword=比萨斜塔上出现巨幅巴勒斯坦国旗)
 1. [申京：约基奇是怪物](https://so.toutiao.com/search?keyword=申京：约基奇是怪物)
 1. [油价将调整 加50升油或省13.5-15元](https://so.toutiao.com/search?keyword=油价将调整+加50升油或省13.5-15元)
-1. [女子婚内出轨后想带私生子回归家庭](https://so.toutiao.com/search?keyword=女子婚内出轨后想带私生子回归家庭)
 1. [宝妈分享萌娃奇葩睡姿](https://so.toutiao.com/search?keyword=宝妈分享萌娃奇葩睡姿)
 1. [国足对韩国拿分是全队不变的目标](https://so.toutiao.com/search?keyword=国足对韩国拿分是全队不变的目标)
 1. [从西雅图到旧金山](https://so.toutiao.com/search?keyword=从西雅图到旧金山)
@@ -84,7 +101,6 @@
 1. [欧预赛：荷兰1-0爱尔兰提前出线](https://so.toutiao.com/search?keyword=欧预赛：荷兰1-0爱尔兰提前出线)
 1. [山西：彻查致26死火灾原因严肃追责](https://so.toutiao.com/search?keyword=山西：彻查致26死火灾原因严肃追责)
 1. [吉鲁替补出场打进2球](https://so.toutiao.com/search?keyword=吉鲁替补出场打进2球)
-1. [以军袭击难民营一学校 哈马斯回应](https://so.toutiao.com/search?keyword=以军袭击难民营一学校+哈马斯回应)
 1. [郑州暴雨被问责官员陈宏伟任市委常委](https://so.toutiao.com/search?keyword=郑州暴雨被问责官员陈宏伟任市委常委)
 1. [茅奖作家如何看新时代文学破圈](https://so.toutiao.com/search?keyword=茅奖作家如何看新时代文学破圈)
 1. [大学教师非法购买农村宅基地被强执](https://so.toutiao.com/search?keyword=大学教师非法购买农村宅基地被强执)
@@ -97,7 +113,6 @@
 1. [四川篮协回应“城市联赛冲突事件”](https://so.toutiao.com/search?keyword=四川篮协回应“城市联赛冲突事件”)
 1. [评弹表演艺术家蒋云仙感染新冠去世](https://so.toutiao.com/search?keyword=评弹表演艺术家蒋云仙感染新冠去世)
 1. [刘亦菲大方回应男粉表白](https://so.toutiao.com/search?keyword=刘亦菲大方回应男粉表白)
-1. [女子买衣服等一年既不发货也不退款](https://so.toutiao.com/search?keyword=女子买衣服等一年既不发货也不退款)
 1. [薛之谦儿子透风又暖心](https://so.toutiao.com/search?keyword=薛之谦儿子透风又暖心)
 1. [宝宝第一次说话清晰地叫了一声哥](https://so.toutiao.com/search?keyword=宝宝第一次说话清晰地叫了一声哥)
 1. [刘亦菲舒淇同场活动](https://so.toutiao.com/search?keyword=刘亦菲舒淇同场活动)
